# test2

./: a.txt
ada/: defaultpackage.gpr
ada-server/: README.md  defaultpackage.gpr
android/: README.md
apache2/: AuthenticationApi.conf  DraftsApi.conf  MessagesApi.conf  RealTimeEventsApi.conf  ServerAndOrganizationsApi.conf  StreamsApi.conf  UsersApi.conf  WebhooksApi.conf
apex/: README.md
asciidoc/: index.adoc
aspnetcore/: Org.OpenAPITools.sln  README.md
avro-schema/: AddSubscriptionsResponse.avsc  AddSubscriptionsResponseAllOf.avsc  ApiKeyResponse.avsc  ApiKeyResponseAllOf.avsc  Attachments.avsc  AttachmentsMessages.avsc  BadEventQueueIdError.avsc  BadEventQueueIdErrorAllOf.avsc  BasicBot.avsc  BasicBotAllOf.avsc  BasicBotBase.avsc  BasicStream.avsc  BasicStreamAllOf.avsc  BasicStreamBase.avsc  Bot.avsc  BotAllOf.avsc  CodedError.avsc  CodedErrorAllOf.avsc  CodedErrorBase.avsc  CodedErrorBaseAllOf.avsc  CustomProfileField.avsc  DefaultStreamGroup.avsc  Draft.avsc  EmojiBase.avsc  EmojiReaction.avsc  EmojiReactionAllOf.avsc  EmojiReactionBase.avsc  EmojiReactionBaseAllOf.avsc  EmojiReactionBaseAllOfUser.avsc  EmojiReactionBaseUser.avsc  GetMessages.avsc  GetMessagesAllOf.avsc  Hotspot.avsc  InlineResponse200.avsc  InvalidApiKeyError.avsc  InvalidMessageError.avsc  InvalidMessageErrorAllOf.avsc  JsonError.avsc  JsonErrorBase.avsc  JsonErrorBaseAllOf.avsc  (+27 more)
bash/: Dockerfile  README.md  _client.sh  client.sh  client.sh.bash-completion
c/: CMakeLists.txt  README.md
c/.openapi-generator/: FILES
c/api/: AuthenticationAPI.c  AuthenticationAPI.h  DraftsAPI.c  DraftsAPI.h  MessagesAPI.c  MessagesAPI.h  RealTimeEventsAPI.c  RealTimeEventsAPI.h  ServerAndOrganizationsAPI.c  ServerAndOrganizationsAPI.h  StreamsAPI.c  StreamsAPI.h  UsersAPI.c  UsersAPI.h  WebhooksAPI.c  WebhooksAPI.h
c/docs/: AuthenticationAPI.md  DraftsAPI.md  MessagesAPI.md  RealTimeEventsAPI.md  ServerAndOrganizationsAPI.md  StreamsAPI.md  UsersAPI.md  WebhooksAPI.md  add_subscriptions_response.md  add_subscriptions_response_all_of.md  api_key_response.md  api_key_response_all_of.md  attachments.md  attachments_messages.md  bad_event_queue_id_error.md  bad_event_queue_id_error_all_of.md  basic_bot.md  basic_bot_all_of.md  basic_bot_base.md  basic_stream.md  basic_stream_all_of.md  basic_stream_base.md  bot.md  bot_all_of.md  coded_error.md  coded_error_all_of.md  coded_error_base.md  coded_error_base_all_of.md  custom_profile_field.md  default_stream_group.md  draft.md  emoji_base.md  emoji_reaction.md  emoji_reaction_all_of.md  emoji_reaction_base.md  emoji_reaction_base_all_of.md  emoji_reaction_base_all_of_user.md  emoji_reaction_base_user.md  get_messages.md  get_messages_all_of.md  (+35 more)
c/model/: add_subscriptions_response.c  add_subscriptions_response.h  add_subscriptions_response_all_of.c  add_subscriptions_response_all_of.h  api_key_response.c  api_key_response.h  api_key_response_all_of.c  api_key_response_all_of.h  attachments.c  attachments.h  attachments_messages.c  attachments_messages.h  bad_event_queue_id_error.c  bad_event_queue_id_error.h  bad_event_queue_id_error_all_of.c  bad_event_queue_id_error_all_of.h  basic_bot.c  basic_bot.h  basic_bot_all_of.c  basic_bot_all_of.h  basic_bot_base.c  basic_bot_base.h  basic_stream.c  basic_stream.h  basic_stream_all_of.c  basic_stream_all_of.h  basic_stream_base.c  basic_stream_base.h  bot.c  bot.h  bot_all_of.c  bot_all_of.h  coded_error.c  coded_error.h  coded_error_all_of.c  coded_error_all_of.h  coded_error_base.c  coded_error_base.h  coded_error_base_all_of.c  coded_error_base_all_of.h  (+94 more)
c/src/: apiClient.c
c/unit-test/: test_add_subscriptions_response.c  test_add_subscriptions_response_all_of.c  test_api_key_response.c  test_api_key_response_all_of.c  test_attachments.c  test_attachments_messages.c  test_bad_event_queue_id_error.c  test_bad_event_queue_id_error_all_of.c  test_basic_bot.c  test_basic_bot_all_of.c  test_basic_bot_base.c  test_basic_stream.c  test_basic_stream_all_of.c  test_basic_stream_base.c  test_bot.c  test_bot_all_of.c  test_coded_error.c  test_coded_error_all_of.c  test_coded_error_base.c  test_coded_error_base_all_of.c  test_custom_profile_field.c  test_default_stream_group.c  test_draft.c  test_emoji_base.c  test_emoji_reaction.c  test_emoji_reaction_all_of.c  test_emoji_reaction_base.c  test_emoji_reaction_base_all_of.c  test_emoji_reaction_base_all_of_user.c  test_emoji_reaction_base_user.c  test_get_messages.c  test_get_messages_all_of.c  test_hotspot.c  test_inline_response_200.c  test_invalid_api_key_error.c  test_invalid_message_error.c  test_invalid_message_error_all_of.c  test_json_error.c  test_json_error_base.c  test_json_error_base_all_of.c  (+27 more)
clojure/: project.clj
cpp-pistache-server/: README.md  main-api-server.cpp
cpp-qt-client/: README.md
cpp-qt-client/client/: CMakeLists.txt  OAIAddSubscriptionsResponse.cpp  OAIAddSubscriptionsResponse.h  OAIAddSubscriptionsResponse_allOf.h  OAIAttachments.h  OAIAttachments_messages.cpp  OAIAttachments_messages.h  OAIAuthenticationApi.cpp  OAIAuthenticationApi.h  OAIBadEventQueueIdError.cpp  OAIBadEventQueueIdError.h  OAIBadEventQueueIdError_allOf.cpp  OAIBasicBot.cpp  OAIBasicBot.h  OAIBasicBot_allOf.cpp  OAIBasicStream.cpp  OAIBasicStreamBase.h  OAIBasicStream_allOf.cpp  OAIBot.cpp  OAICodedError.cpp  OAICodedError.h  OAICodedErrorBase.h  OAICodedError_allOf.cpp  OAICustomProfileField.cpp  OAIDefaultStreamGroup.cpp  OAIDefaultStreamGroup.h  OAIDraft.cpp  OAIDraftsApi.cpp  OAIDraftsApi.h  OAIEmojiBase.cpp  OAIEmojiReaction.cpp  OAIEmojiReactionBase.cpp  OAIEmojiReactionBase.h  OAIEmojiReactionBase_allOf.h  OAIEmojiReactionBase_allOf_user.cpp  OAIEmojiReactionBase_allOf_user.h  OAIEmojiReactionBase_user.h  OAIEmojiReaction_allOf.cpp  OAIEmojiReaction_allOf.h  OAIEnum.h  (+50 more)
cpp-restbed-server/: README.md
cpp-restsdk/: ApiClient.cpp  ApiClient.h  ApiConfiguration.cpp  ApiConfiguration.h  ApiException.cpp  ApiException.h  CMakeLists.txt  HttpContent.cpp  HttpContent.h  IHttpBody.h  JsonBody.cpp  JsonBody.h  ModelBase.cpp  ModelBase.h  MultipartFormData.cpp  Object.cpp  (+3 more)
(+12853 files in other folders)
